# genshinblkstuff

./: README.md  configure_linux.sh  configure_win.bat
blkstuff/: CMakeLists.txt  magic_constants.h  main.cpp  util.cpp  util.h
